--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "airbnb-base",
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"]}],
-    "no-useless-return": "off"
+    "no-useless-return": "off",
+    "linebreak-style": "off"
   }
 }
