--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"]}],
     "no-useless-return": "off",
-    "linebreak-style": "off"
+    "linebreak-style": "off",
+    "consistent-return": "off"
   }
 }
